sync_repo/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil42
  namespace: dev
  labels:
    app: wil-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wil-app
  template:
    metadata:
      labels:
        app: wil-app
    spec:
      containers:
        - image: wil42/playground
          imagePullPolicy: always
          ports:
          - containerPort: 8888
