sync_repo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wil42
  namespace: dev
spec:
  selector:
    app: wil42
  ports:
    - name: wil42
      protocol: TCP
      port: 8888
      targetPort: 8888
