sync_repo/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wil-app-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wil42
            port:
              number: 8888
